# analise_cd

./: Dockerfile  app.py  cidades_proximas_recife.csv  cidades_proximas_salvador.csv  docker-compose.yml  main.py  pyproject.toml
src/data/: cidades_proximas_recife_com_capitais.csv  cidades_proximas_salvador_com_capitais.csv  dados_gerais_recife.csv  dados_gerais_salvador.csv  dados_socioeconomicos_capitais_proximas.csv  dados_socioeconomicos_capitais_proximas_recife.csv  dados_socioeconomicos_recife_regiao.csv  dados_socioeconomicos_salvador_regiao.csv
src/ingestion/: data_socioeconomic.py  ingest_distance.py
